<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/bottom_linearLayout"
                app:layout_constraintVertical_bias="0.3"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/explain_verification_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/input_verification_code"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/login_page_input_linear_layout">
                    <TextView
                        android:id="@+id/change_phone_number_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number_change"
                        android:gravity="right"
                        android:textColor="@color/black"
                        android:layout_weight="0.5"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/or"
                        android:gravity="center"
                        android:layout_weight="0.1"
                        android:layout_marginLeft="5dp"/>
                    <TextView
                        android:id="@+id/sms_resend_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/send_sms_again"
                        android:textColor="@color/black"
                        android:layout_weight="0.5"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/login_code_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_box_border"
                        android:hint="@string/login_code"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColorHint="@color/border_color" />

                    <Button
                        android:id="@+id/login_code_clear_button"
                        android:layout_width="30dip"
                        android:layout_height="30dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dip"
                        android:background="@drawable/ic_baseline_clear_24"
                        android:visibility="invisible" />
                </RelativeLayout>

                <Button
                    android:id="@+id/sign_page_next_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:layout_weight="0.4"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/facebook_color"
                    android:background="@drawable/edittext_box_border"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottom_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/border_color"
                    android:layout_gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/signup_inquire_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/account_already_have"
                        android:gravity="right"
                        android:layout_weight="0.7"
                        />
                    <TextView
                        android:id="@+id/signup_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/account_already_have_login"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_weight="0.5"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>