<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/sign_up_page_bottom_linearLayout"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintVertical_bias="0.5">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@mipmap/sign_up_user_icon"
                    />
                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/sign_up_page_tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabBackground="@drawable/tab_underline">
                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number_tab_layout"
                        android:textColor="@color/black"
                        android:textSize="20dp"/>

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_tab_layout"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        />

                </com.google.android.material.tabs.TabLayout>
                <EditText
                    android:id="@+id/sign_up_email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email"
                    android:singleLine="true"
                    android:textColorHint="@color/border_color"
                    android:padding="10dp"
                    android:background="@drawable/edittext_box_border"
                    />

                <RelativeLayout
                    android:id="@+id/phone_number_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/sign_up_phone_number_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_box_border"
                        android:hint="@string/phone_number"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColorHint="@color/border_color"/>


                    <Button
                        android:id="@+id/sign_up_page_clear_button"
                        android:layout_width="30dip"
                        android:layout_height="30dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dip"
                        android:background="@drawable/ic_baseline_clear_24"
                        android:visibility="invisible" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/sign_up_phone_number_detail_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/phone_number_detail"
                    />

                <Button
                    android:id="@+id/sign_page_next_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/next"
                    android:textColor="@color/button_text_disabled_color"
                    android:layout_weight="0.4"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/disabled_button_box_border"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_up_page_bottom_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                >
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border_color"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/login_page_signup_inquire_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/account_already_have"
                    android:gravity="right"
                    android:layout_weight="0.7"
                    />
                <TextView
                    android:id="@+id/login_page_signup_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/account_already_have_login"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_weight="0.5"/>
            </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>