<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/login_page_language_change_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="한국어"
                android:gravity="center"
                android:autoSizeTextType="uniform"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:layout_constraintStart_toEndOf="@+id/login_page_language_change_textview"
                app:layout_constraintTop_toTopOf="parent"
                />

            <LinearLayout
                android:id="@+id/login_page_input_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/login_page_bottom_linearLayout_noClick"
                app:layout_constraintVertical_bias="0.6"
                >
                <TextView
                    android:id="@+id/login_page_logo"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:autoSizeTextType="uniform"
                    android:text="𝕴𝖓𝖘𝖙𝖆𝖌𝖗𝖆𝖒"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.25"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/login_page_id_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_box_border"
                        android:hint="@string/id"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColorHint="@color/border_color" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:layout_marginTop="15dp">

                    <EditText
                        android:id="@+id/login_page_pw_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_box_border"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColorHint="@color/border_color" />
                    <Button
                        android:id="@+id/login_page_password_icon"
                        android:layout_width="30dip"
                        android:layout_height="30dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dip"
                        android:background="@mipmap/hide_password"/>
                </RelativeLayout>


                <Button
                    android:id="@+id/login_page_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:layout_weight="0.4"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/facebook_color"
                    android:background="@drawable/edittext_box_border"
                    />
                <LinearLayout
                    android:id="@+id/login_page_find_login_info_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/login_page_input_linear_layout">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/login_detail"
                        android:gravity="right"
                        android:layout_weight="0.7"
                        />
                    <TextView
                        android:id="@+id/login_page_find_login_info"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/login_help"
                        android:textColor="@color/black"
                        android:layout_weight="0.5"/>
                </LinearLayout>

                <Button
                    android:id="@+id/login_page_facebook_login_button_when_signup_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:text="Continue as Facebook"
                    android:backgroundTint="@color/facebook_color"
                    android:textAllCaps="false"
                    android:background="@drawable/edittext_box_border"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/login_page_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    >
                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/border_color"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/or"
                        android:gravity="center"
                        android:layout_weight="0.1"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/border_color"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"/>
                </LinearLayout>



                <Button
                    android:id="@+id/login_page_facebook_login_button_when_signIn_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:text="@string/continue_as_facebook"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/facebook_color"
                    android:background="@drawable/edittext_box_border"
                    />
                <TextView
                    android:id="@+id/login_page_signup_with_email_phoneNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_with_email_phone_num"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:textColor="@color/facebook_color"
                    android:textStyle="bold"
                    android:visibility="gone"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_page_bottom_linearLayout_noClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/border_color"
                    android:layout_gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/login_page_signup_inquire_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/no_account"
                        android:gravity="right"
                        android:layout_weight="0.7"
                        />
                    <TextView
                        android:id="@+id/login_page_signup_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/signup"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_weight="0.5"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>